<resources>
    <string name="app_name">Calculator</string>

    <string name="btn_clear">C</string>
    <string name="btn_modulus">%</string>
    <string name="btn_divide">/</string>
    <string name="btn_multiply">×</string>
    <string name="btn_subtract">-</string>
    <string name="btn_add">+</string>
    <string-array name="brackets">
        <item>(</item>
        <item>)</item>
    </string-array>
    <string-array name="btn_numbers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string name="btn_equals">=</string>
    <string name="btn_decimal">.</string>
    <string name="btn_name">%s</string>
</resources>